--- a/src/app/templates/_includes/_sections/_experience.pug
+++ b/src/app/templates/_includes/_sections/_experience.pug
@@ -10,7 +10,7 @@ section.experience
                     .job
                         h2.company-name=job.company.name
                         .row.roles
-                            h4.position-title=job.position.title
+                            h4.cv-position-title=job.position.title
                             .dates
                                 time.start(datetime=job.position.dates.start)=job.position.dates.start+' -'
                                 time.end(datetime=job.position.dates.finish)=job.position.dates.finish
