--- a/src/app/styles/aboutme.scss
+++ b/src/app/styles/aboutme.scss
@@ -140,22 +140,9 @@ strong {
 	padding: 0 1em;
 }
 
-.grade, .award {
-	padding: 60px 40px;
-	border-radius: 2px;
-	border-top: 3px solid;
-	border-top-color: $textLight;
-	transition: all .3s ease-out;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
-	flex: 1;
-
-	&:hover {
-		box-shadow: 0 15px 30px rgba(0, 0, 0, .15);
-	}
-}
-
-.grade, .award {
-	border-top: none;
+.cv-position-title {
+	padding-right: 2em;
+	font-weight: 700;
 }
 
 .job-header {
@@ -209,11 +196,15 @@ strong {
 
 .roles {
 	padding: 0 .65em;
-	justify-content: space-between;
 	align-items: center;
 }
 
-.duration h2 {
+.dates {
+	display: flex;
+	font-size: 1.15em;
+}
+
+.duration h2{
 	padding: 1.5em 1em;
 	display: flex;
 	align-items: center;
@@ -223,6 +214,37 @@ strong {
 	font-size: 1.5em;
 	background-color: $accent;
 	box-shadow: 0 .5em 1.5em rgba(255, 82, 82, .45);
+}
+
+.duration.grade-duration h2 {
+	padding: 1.5em 1.25em;
+}
+
+.skills-list {
+	padding: 0 1.5em;
+}
+
+.skill {
+	padding: 1em 0;
+}
+
+.progress-bar, .bar {
+	height: 4px;
+	border-radius: 4px;
+}
+
+.progress-bar {
+	position: relative;
+	width: 100%;
+	z-index: 10;
+	top: 0;
+	background-color: $sectionHighlight;
+}
+
+.bar {
+	width: 30%;
+	background: #38f;
+	box-shadow: 0 0 10px #59d;
 }
 
 footer {
@@ -304,6 +326,21 @@ footer {
 
 	footer, footer .social {
 		text-align: center;
+	}
+}
+
+@media(max-width: 1125px) {
+	.duration {
+		display: none;
+	}
+
+	.job-card {
+		-webkit-flex-basis: 100%;
+		-ms-flex-preferred-size: 100%;
+		flex-basis: 100%;
+		max-width: 100%;
+		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+		padding: 2em;
 	}
 }
 
