--- a/src/app/templates/views/aboutme.pug
+++ b/src/app/templates/views/aboutme.pug
@@ -35,8 +35,8 @@ html
         meta(name='msapplication-TileImage', content='img/ms-icon-144x144.png')
         meta(name='theme-color', content='#FF5252')
         link(rel="mask-icon" href="c.svg" color="#FF5252")
-        link(rel="stylesheet", type="text/css", href="/aboutme.css")
-        //-style
+        //-link(rel="stylesheet", type="text/css", href="/aboutme.css")
+        style
             include ../../static/css/aboutme.css
         script
             include ../../static/js/fonts.js
@@ -52,13 +52,9 @@ html
         main
             include ../_includes/_sections/_profile.pug
             include ../_includes/_sections/_experience.pug
+            include ../_includes/_sections/_skills.pug
             include ../_includes/_sections/_education.pug
-            include ../_includes/_sections/_awards.pug
-            //-section.skills
-                .wrap
-                    h2.section-title Skills
-                    h4.section-subtitle Things that I use and love.
-                    .row.around-xs
+            //-include ../_includes/_sections/_awards.pug
         include ../_includes/_footer.pug
         script.
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');
