--- a/src/app/templates/_includes/_sections/_awards.pug
+++ b/src/app/templates/_includes/_sections/_awards.pug
@@ -2,12 +2,10 @@ section.awards
     .wrap
         h2.section-title Awards
         h4.section-subtitle Distinctions and recognitions of my work.
-        .row
+        .row.center-xs
             each award in me.awards
                 article.col-xs-12.col-sm-6.col-md-4.award-card
                     .award
-                        svg(class="icon icon-award")
-                            use(xlink:href="#icon-award")
-                        strong=award.title
-                        span.project=award.project
-                        span=award.year+' - '+award.organization
+                        h3.award-title=award.title
+                        h4.award-project=award.project
+                        p=award.organization+' '+award.year
