--- a/src/app/templates/views/aboutme.pug
+++ b/src/app/templates/views/aboutme.pug
@@ -46,7 +46,7 @@ html
         header.site-header(itemprop="author", itemscope, itemtype="http://schema.org/Person")
             .wrap
                 h1
-                    span.about About
+                    span.about About 
                     span.my-name=me.name
                 h2.position-title=me.job
         main
@@ -54,7 +54,7 @@ html
             include ../_includes/_sections/_experience.pug
             include ../_includes/_sections/_skills.pug
             include ../_includes/_sections/_education.pug
-            //-include ../_includes/_sections/_awards.pug
+            include ../_includes/_sections/_awards.pug
         include ../_includes/_footer.pug
         script.
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');
