--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -10,6 +10,7 @@ $sectionHighlight: #F1F6F8;
 $text: #37474F;
 $textHover: #78909C;
 $textLight: #B0BEC5;
+$links: #1785F8;
 
 /* LANGUAGES, TAGS AND ICONS */
 
