Minor changes in templates

--- a/src/app/templates/_includes/_footer.pug
+++ b/src/app/templates/_includes/_footer.pug
@@ -14,7 +14,7 @@ footer
                         a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
                             |Blog
                     li.item
-                        a(href='#{me.mail}', onmousedown="ga('send', 'event', 'Footer Nav', 'Mail');")
+                        a(href='mailto:'+me.mail, onmousedown="ga('send', 'event', 'Footer Nav', 'Mail');")
                             |Contact
 
             .social.col-xs-12.col-sm-6
