--- a/src/app/templates/_includes/_nav.pug
+++ b/src/app/templates/_includes/_nav.pug
@@ -9,8 +9,8 @@ nav.nav.row.middle-xs
                     a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Menu', 'Home');")
                         |Home
                 li.item
-                    a(href='https://carloscuesta.me/aboutme', onmousedown="ga('send', 'event', 'Menu', 'About Me');", target="_blank")
+                    a(href='https://carloscuesta.me/aboutme', onmousedown="ga('send', 'event', 'Menu', 'About Me');")
                         |About Me
                 li.item
-                    a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Menu', 'Blog');", target="_blank")
+                    a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Menu', 'Blog');")
                         |Blog
