Update blog styles
Minor changes in link color

--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -397,7 +397,7 @@ article .date {
 }
 
 .blog-footer a {
-	color: #FF5252;
+	color: #1785F8;
 }
 
 .icon-twitter:hover {
@@ -629,7 +629,7 @@ header.no-cover {
 }
 
 .post-content a {
-	color: #FF5252;
+	color: #1785F8;
 }
 
 .post-content a:hover {
