Fix footer links
Fixes #23

--- a/src/app/templates/_includes/_footer.pug
+++ b/src/app/templates/_includes/_footer.pug
@@ -18,13 +18,13 @@ footer
                             |Contact
 
             .social.col-xs-12.col-sm-6
-                a(href="https://twitter.com/#{social.twitter}", target="_blank")
+                a(href="https://twitter.com/crloscuesta", target="_blank")
                     svg.icon.icon-twitter
                         use(xlink:href="#icon-twitter")
-                a(href="https://github.com/#{social.github}", target="_blank")
+                a(href="https://github.com/carloscuesta", target="_blank")
                     svg.icon.icon-github
                         use(xlink:href="#icon-github")
-                a(href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
+                a(href="https://es.linkedin.com/in/crloscuesta", target="_blank")
                     svg.icon.icon-linkedin
                         use(xlink:href="#icon-linkedin")
 script.
