Add error.hbs content
See #37

--- a/src/blog/content/themes/carloscuesta/error.hbs
+++ b/src/blog/content/themes/carloscuesta/error.hbs
@@ -1,1 +1,64 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Carlos Cuesta | Blog | Error 404</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:description" content="Error 404 Page Not Found - Carlos Cuesta">
+    <meta name="twitter:creator" content="@crloscuesta">
+    <meta name="twitter:url" content="https://carloscuesta.me">
+    <meta name="twitter:title" content="Carlos Cuesta">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://carloscuesta.me/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="https://carloscuesta.me/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="https://carloscuesta.me/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="https://carloscuesta.me/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="https://carloscuesta.me/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="https://carloscuesta.me/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="https://carloscuesta.me/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="https://carloscuesta.me/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://carloscuesta.me/apple-icon-180x180.png">
+	<link rel="apple-touch-icon" sizes="192x192" href="https://carloscuesta.me/apple-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://carloscuesta.me/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://carloscuesta.me/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://carloscuesta.me/favicon-16x16.png">
+	<link rel="manifest" href="https://carloscuesta.me/manifest.json">
+    <meta name="msapplication-TileColor" content="#FF5252">
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <meta name="theme-color" content="#FF5252">
+    <style>
+        .col-xs-12,.row{box-sizing:border-box}.container{margin-right:auto;margin-left:auto}.row{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex:0;-webkit-flex:0 1 auto;-ms-flex:0 1 auto;flex:0 1 auto;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;margin-right:-.5rem;margin-left:-.5rem}.col-xs-12{-webkit-box-flex:0;-webkit-flex:0 0 auto;-ms-flex:0 0 auto;flex:0 0 auto;padding-right:1.25rem;padding-left:1.25rem;-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;max-width:100%}.center-xs{-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;text-align:center}.middle-xs{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.around-xs{-webkit-justify-content:space-around;-ms-flex-pack:distribute;justify-content:space-around}@media only screen and (min-width:48em){.container{width:49rem}.col-sm-6{box-sizing:border-box;-webkit-box-flex:0;-webkit-flex:0 0 auto;-ms-flex:0 0 auto;flex:0 0 auto;padding-right:1.25rem;padding-left:1.25rem;-webkit-flex-basis:50%;-ms-flex-preferred-size:50%;flex-basis:50%;max-width:50%}}@media only screen and (min-width:64em){.container{width:65rem}.col-md-4,.col-md-5{box-sizing:border-box;-webkit-box-flex:0;-webkit-flex:0 0 auto;-ms-flex:0 0 auto;flex:0 0 auto;padding-right:1.25rem;padding-left:1.25rem}.col-md-4{-webkit-flex-basis:33.333%;-ms-flex-preferred-size:33.333%;flex-basis:33.333%;max-width:33.333%}.col-md-5{-webkit-flex-basis:41.667%;-ms-flex-preferred-size:41.667%;flex-basis:41.667%;max-width:41.667%}}body,html{margin:0;padding:0;text-rendering:optimizeLegibility;font-family:Montserrat,'Helvetica Neue';font-size:16px;line-height:1.5;font-weight:300;background-color:#F1F6F8;color:#37474F;overflow-x:hidden}.status-code,a,h1{color:#FF5252}.btn{font-family:Montserrat;font-weight:400;padding:.45em 1em;border-radius:50px;transition:all .3s ease-out;letter-spacing:.015em;display:flex;align-items:center;background-color:#FF5252;color:#fff;text-decoration:none!important}.btn-raised{box-shadow:0 .5em 1.5em rgba(255,82,82,.45)}.btn-return{display:flex;padding-top:1em}h1,h2,h3,h4,h5,h6{line-height:1.15;margin-top:0;margin-bottom:1rem}h1{font-size:4.5em;font-weight:700}h2{font-size:2.5em;font-weight:300}h3,h4{font-weight:400}h3{font-size:1.5em}h4{font-size:1.25em}h5{font-size:1.125em}ul{list-style:none;padding:0;font-size:1.5em}li a{text-decoration:none;transition:color .2s ease-in-out}li a:hover{color:#78909C}.message{min-height:100vh;padding:3em}@media (max-width:468px){.message{padding:1.5em}body,html{font-size:14px}}.btn-blue{background-color:#52b8ff;box-shadow:0 .5em 1.5em rgba(82,184,255,.45);margin-left:2em}
+    </style>
+    <!--<script>!function(){function d(a,b,c){a.addEventListener?a.addEventListener(b,c,!1):a.attachEvent&&a.attachEvent("on"+b,c)}function e(){if(window.localStorage&&window.XMLHttpRequest)if(window.localStorage&&localStorage.font_css_cache&&localStorage.font_css_cache_file===c)f(localStorage.font_css_cache);else{var a=new XMLHttpRequest;a.open("GET",c,!0);d(a,"load",function(){4===a.readyState&&(f(a.responseText),localStorage.font_css_cache=a.responseText,localStorage.font_css_cache_file=c)});a.send()}else{var b=document.createElement("link");b.href=c;b.rel="stylesheet";b.type="text/css";document.getElementsByTagName("head")[0].appendChild(b);document.cookie="font_css_cache"}}function f(a){var b=document.createElement("style");b.innerHTML=a;document.getElementsByTagName("head")[0].appendChild(b)}var c="css/font.css";window.localStorage&&localStorage.font_css_cache||-1<document.cookie.indexOf("font_css_cache")?e():d(window,"load",e)}();</script>-->
+</head>
+
+<body>
+    <div class="container">
+        <div class="row message middle-xs">
+            <div class="col-xs-12">
+                <h1>Are you lost?</h1>
+                <h2>The page you are looking for doesn't exists.</h2>
+                <h3>Here are some helpful links instead:</h3>
+                <nav>
+                    <ul>
+                        <li><a href="https://carloscuesta.me" onmousedown="ga('send', 'event', '404','Click', 'Link Home');">Home</a>
+                        </li>
+                        <li><a href="https://carloscuesta.me/aboutme" onmousedown="ga('send', 'event', '404','Click', 'Link Blog');">About me</a>
+                        </li>
+                        <li><a href="https://carloscuesta.me/blog" onmousedown="ga('send', 'event', '404','Click', 'Link Blog');">Blog</a>
+                        </li>
+                        <li><a href="https://carloscuesta.me/sitemap.xml" onmousedown="ga('send', 'event', '404','Click', 'Link Sitemap');">Sitemap</a>
+                        </li>
+                    </ul>
+                </nav>
+                <h4>Error Code: <span class="status-code">404</span></h4>
+                <div class="btn-return"><a class="btn btn-raised" href="https://carloscuesta.me" onmousedown="ga('send', 'event', '404','Click', 'Return Button');">Return to carloscuesta</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');ga('send', 'event', 'Error','404', 'Page not found');</script>
+</body>
+
+</html>
