--- a/src/app/styles/_partials/_defaults.scss
+++ b/src/app/styles/_partials/_defaults.scss
@@ -1,7 +1,7 @@
 html, body {
 	margin: 0;
     padding: 0;
-    font-family: 'Montserrat','Helvetica Neue';
+    font-family: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     font-size: 16px;
     line-height: 1.5;
     font-weight: 300;
@@ -47,7 +47,7 @@ h3 {
 
 h4 {
     font-size: 1.25em;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 h5 {
