✏️ Fix aboutme title
Signed-off-by: Carlos Cuesta <carloscuesta@me.com>

--- a/src/app/templates/views/aboutme.pug
+++ b/src/app/templates/views/aboutme.pug
@@ -1,7 +1,7 @@
 doctype html
 html
 	head
-		title #{site.title} | About Me | Front End Developer
+		title Carlos Cuesta | About Me | Front End Developer
 		//-link(rel="stylesheet", type="text/css", href="/aboutme.css")
 		style
 			include ../../static/css/aboutme.css
