💄 Update about styles
Signed-off-by: Carlos Cuesta <carloscuesta@me.com>

--- a/src/app/templates/views/aboutme.pug
+++ b/src/app/templates/views/aboutme.pug
@@ -2,8 +2,8 @@ doctype html
 html
 	head
 		title Carlos Cuesta | About Me | Front End Developer
-		//-link(rel="stylesheet", type="text/css", href="/aboutme.css")
-		style
+		link(rel="stylesheet", type="text/css", href="/aboutme.css")
+		//-style
 			include ../../static/css/aboutme.css
 		include ../_includes/_head.pug
 		link(rel="canonical", href="https://carloscuesta.me/aboutme")
